feat: navigation bar almost complete

--- a/index.html
+++ b/index.html
@@ -6,15 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Web</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
 </head>
 <body>
    <header> 
     <nav id="Navegacion">
-        <a href="https://imgbb.com/"><img src="https://i.ibb.co/gRCmRPh/LogoAP.png" alt="LogoAP" border="0"></a>
-        <h1>Argentina Programa #YoProgramo</h1>
-        <a href="https://imgbb.com/"><img src="https://i.ibb.co/gMwLWjV/Logo-Twitter.png" alt="Logo-Twitter" border="0"></a>
-        <a href="https://imgbb.com/"><img src="https://i.ibb.co/hRm78XV/Logo-Linkedin.png" alt="Logo-Linkedin" border="0"></a>
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/gRCmRPh/LogoAP.png" alt="LogoAP"  class="Logos" border="0"></a>
+        <h1 class="Argentina-Programa">Argentina Programa #YoProgramo</h1>
+        
+         <a href="#">Sobre Mi</a>
+        <a href="#">Experiencia</a>
+        <a href="#">Educacion</a>
+        <a href="#">Conocimientos</a>
+        <a href="#">Proyectos</a>
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/gMwLWjV/Logo-Twitter.png" alt="Logo-Twitter" class="Logos" border="0"></a>
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/hRm78XV/Logo-Linkedin.png" alt="Logo-Linkedin" class="Logos" border="0"></a>
         <button>Login</button>
+        
     </nav>
    </header>  
 </body>
