feat: bar navigation complete - about me section incomplete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
    <header> 
@@ -16,16 +21,24 @@
         <a href="https://imgbb.com/"><img src="https://i.ibb.co/gRCmRPh/LogoAP.png" alt="LogoAP"  class="Logos" border="0"></a>
         <h1 class="Argentina-Programa">Argentina Programa #YoProgramo</h1>
         
-         <a href="#">Sobre Mi</a>
-        <a href="#">Experiencia</a>
-        <a href="#">Educacion</a>
-        <a href="#">Conocimientos</a>
-        <a href="#">Proyectos</a>
+        <a class="Secciones" href="#">Sobre Mi</a>
+        <a class="Secciones" href="#">Experiencia</a>
+        <a class="Secciones" href="#">Educacion</a>
+        <a class="Secciones" href="#">Conocimientos</a>
+        <a class="Secciones" href="#">Proyectos</a>
         <a href="https://imgbb.com/"><img src="https://i.ibb.co/gMwLWjV/Logo-Twitter.png" alt="Logo-Twitter" class="Logos" border="0"></a>
         <a href="https://imgbb.com/"><img src="https://i.ibb.co/hRm78XV/Logo-Linkedin.png" alt="Logo-Linkedin" class="Logos" border="0"></a>
-        <button>Login</button>
-        
+        <button id="Boton">Login</button>
     </nav>
-   </header>  
-</body>
+   </header>
+   <main>
+    <section id="Sobre-Mi">
+        <a  href="https://ibb.co/nfK06mw"><img src="https://i.ibb.co/pZkPbw1/Foto.jpg" class="Foto-Perfil" alt="Foto" border="0"></a>
+        <div>
+        <h1 class="Soy-Facundo">Soy Facundo</h1>
+        <h2 class="Full-Stack">Full Stack Developer Jr</h2>
+        </div>
+    </section>
+   </main>  
+</body> 
 </html>
