feat: about me section almost complete

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a  href="https://ibb.co/nfK06mw"><img src="https://i.ibb.co/pZkPbw1/Foto.jpg" class="Foto-Perfil" alt="Foto" border="0"></a>
         <div>
         <h1 class="Soy-Facundo">Soy Facundo</h1>
-        <h2 class="Full-Stack">Full Stack Developer Jr</h2>
+        <h2 class="Full-Stack">Full Stack Developer Jr.</h2>
         </div>
     </section>
    </main>  
