feat: starting experiencie section

--- a/index.html
+++ b/index.html
@@ -32,12 +32,28 @@
     </nav>
    </header>
    <main>
-    <section id="Sobre-Mi">
-        <a  href="https://ibb.co/nfK06mw"><img src="https://i.ibb.co/pZkPbw1/Foto.jpg" class="Foto-Perfil" alt="Foto" border="0"></a>
-        <div>
-        <h1 class="Soy-Facundo">Soy Facundo</h1>
-        <h2 class="Full-Stack">Full Stack Developer Jr.</h2>
-        </div>
+    <section>
+        <article id="Sobre-Mi">
+         <a  href="https://ibb.co/nfK06mw"><img src="https://i.ibb.co/pZkPbw1/Foto.jpg" class="Foto-Perfil" alt="Foto" border="0"></a>
+          <div>
+           <h1 class="Soy-Facundo">Soy Facundo</h1>
+           <h2 class="Full-Stack">Full Stack Developer Jr.</h2>
+          </div>
+        </article>
+        <article id="Experiencia">
+            <h2 class="Texto-Experiencia">Experiencia Laboral</h2>
+            <div id="Logo-Puesto">
+             <a href="https://imgbb.com/"><img id="LogoBW" src="https://i.ibb.co/981Bmy8/LogoBW.png" alt="LogoBW" border="0"></a>
+             <h2 class="Gestor">Gestor de cobranza por medio de redes sociales</h2>
+            </div>
+            <ul>
+            <li>Marzo 2017 - Actualmente</li>
+            <li>Contactar deudores por medio de llamado telefónico, Whatsapp y correo</li>
+            <li>Brindar información sobre deuda y cerrar acuerdo según pautas vigentes.</li>
+            <li>Efectuar, enviar y recibir comprobantes de pago, recibos, transferencias y débitos automáticos.</li>
+            <li>Dar apoyo al sector de Back-Office</li>
+        </ul>
+        </article>
     </section>
    </main>  
 </body> 
