feat: education section incomplete

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Dancing+Script&family=Indie+Flower&display=swap" rel="stylesheet">
 
 
 </head>
@@ -42,17 +45,38 @@
         </article>
         <article id="Experiencia">
             <h2 class="Texto-Experiencia">Experiencia Laboral</h2>
+            <div id="Centrar-Experiencia">
             <div id="Logo-Puesto">
              <a href="https://imgbb.com/"><img id="LogoBW" src="https://i.ibb.co/981Bmy8/LogoBW.png" alt="LogoBW" border="0"></a>
              <h2 class="Gestor">Gestor de cobranza por medio de redes sociales</h2>
             </div>
             <ul>
-            <li>Marzo 2017 - Actualmente</li>
-            <li>Contactar deudores por medio de llamado telefónico, Whatsapp y correo</li>
-            <li>Brindar información sobre deuda y cerrar acuerdo según pautas vigentes.</li>
-            <li>Efectuar, enviar y recibir comprobantes de pago, recibos, transferencias y débitos automáticos.</li>
-            <li>Dar apoyo al sector de Back-Office</li>
+            <li class="Detalles">Empresa: Estudio Besser Weiss</li>
+            <li class="Detalles">Marzo 2017 - Actualmente</li>
+            <li class="Detalles">Contactar deudores por medio de llamado telefónico, Whatsapp y correo</li>
+            <li class="Detalles">Brindar información sobre deuda y cerrar acuerdo según pautas vigentes.</li>
+            <li class="Detalles">Efectuar, enviar y recibir comprobantes de pago, recibos, transferencias y débitos automáticos.</li>
+            <li class="Detalles">Dar apoyo al sector de Back-Office</li>
         </ul>
+        </div>
+        <div id="Centrar-Experiencia">
+            <div id="Logo-Puesto">
+              <a href="https://imgbb.com/"><img id="LogoBW" src="https://i.ibb.co/xjLQz8f/logo-Personal.png" alt="logo-Personal" border="0"></a>
+              <h2 class="Gestor">Representante de Atencion al cliente</h2>
+            </div>
+            <ul>
+            <li class="Detalles2">Empresa: Comdata Argentina</li>
+            <li class="Detalles2">Diciembre 2015 - Enero 2017</li>
+            <li class="Detalles2">Recibir llamadas de clientes de Personal Flow.</li>
+            <li class="Detalles2">Resolver consultas y problemas referidos al servicio de telefonia celular.</li>
+            <li class="Detalles2">Venta de nuevas lineas, equipos y planes</li>
+            </ul>
+        </div>
+        </article>
+        </article>
+        <article id="Educacion">
+            <h2 class="Texto-Experiencia">Educacion</h2>
+            <a href="https://imgbb.com/"><img src="https://i.ibb.co/cwyzBLH/LogoAp2.png" id="Logo-Educacion" alt="LogoAp2" border="0"></a>
         </article>
     </section>
    </main>  
