feat: education section almost complete

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         </article>
         <article id="Educacion">
             <h2 class="Texto-Experiencia">Educacion</h2>
+            <div id="Centrar-Logo">
             <a href="https://imgbb.com/"><img src="https://i.ibb.co/cwyzBLH/LogoAp2.png" id="Logo-Educacion" alt="LogoAp2" border="0"></a>
+            </div>
         </article>
     </section>
    </main>  
