feat: Educacion section complete

--- a/index.html
+++ b/index.html
@@ -76,8 +76,19 @@
         </article>
         <article id="Educacion">
             <h2 class="Texto-Experiencia">Educacion</h2>
-            <div id="Centrar-Logo">
+            <div id="Centrar-Logo">    
             <a href="https://imgbb.com/"><img src="https://i.ibb.co/cwyzBLH/LogoAp2.png" id="Logo-Educacion" alt="LogoAp2" border="0"></a>
+            <p>^</p>
+            <p>|</p>
+            <h2 class="Texto-Educacion">Aqui estudie para Desarrollador Full-Stack Jr.</h2>
+            </div>
+            <div id="Alineacion-Educacion">
+            <a href="https://imgbb.com/"><img src="https://i.ibb.co/fnrY967/Logo-Freecodecamp.png" id="Logo-Educacion2" alt="Logo-Freecodecamp" border="0"></a>
+            <h2 class="Texto-Educacion"> <---- Aqui obtuve la certificacion de "Diseño Web Responsivo" y "Algoritmos en Javascript"</h2>
+            </div>  
+            <div id="Alineacion-Educacion">
+                <h2 class="Texto-Educacion"> En OpenBootcamp reforce mis conocimientos en Javascript ----></h2>
+                <a href="https://ibb.co/DWgkR4D"><img src="https://i.ibb.co/3dYWC1y/Logo-Open-Bootcamp.jpg" id="Logo-OpenBootcamp" alt="Logo-Open-Bootcamp" border="0"></a>
             </div>
         </article>
     </section>
