--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <li class="Detalles">Empresa: Estudio Besser Weiss</li>
             <li class="Detalles">Marzo 2017 - Actualmente</li>
             <li class="Detalles">Contactar deudores por medio de llamado telefónico, Whatsapp y correo</li>
-            <li class="Detalles">Brindar información sobre deuda y cerrar acuerdo según pautas vigentes.</li>
-            <li class="Detalles">Efectuar, enviar y recibir comprobantes de pago, recibos, transferencias y débitos automáticos.</li>
+            <li class="Detalles">Brindar información sobre deuda y cerrar acuerdo según pautas vigentes</li>
+            <li class="Detalles">Efectuar, enviar y recibir comprobantes de pago, recibos, transferencias y débitos automáticos</li>
             <li class="Detalles">Dar apoyo al sector de Back-Office</li>
         </ul>
         </div>
@@ -67,7 +67,7 @@
             <ul>
             <li class="Detalles2">Empresa: Comdata Argentina</li>
             <li class="Detalles2">Diciembre 2015 - Enero 2017</li>
-            <li class="Detalles2">Recibir llamadas de clientes de Personal Flow.</li>
+            <li class="Detalles2">Recibir llamadas de clientes de Personal Flow</li>
             <li class="Detalles2">Resolver consultas y problemas referidos al servicio de telefonia celular.</li>
             <li class="Detalles2">Venta de nuevas lineas, equipos y planes</li>
             </ul>
@@ -90,6 +90,17 @@
                 <h2 class="Texto-Educacion"> En OpenBootcamp reforce mis conocimientos en Javascript ----></h2>
                 <a href="https://ibb.co/DWgkR4D"><img src="https://i.ibb.co/3dYWC1y/Logo-Open-Bootcamp.jpg" id="Logo-OpenBootcamp" alt="Logo-Open-Bootcamp" border="0"></a>
             </div>
+        </article>
+        <article id="Habilidades">
+         <h1 class="Texto-Experiencia">Lenguajes</h1>
+         <div id="Contenedor-Habilidades">
+         <img src="https://i.ibb.co/jg1t4Dk/HTML5-Logo-removebg-preview.png" class="Logo-Html" alt="HTML5-Logo-removebg-preview" border="0">
+         <progress id="file" max="100" value="90"></progress>
+         <img src="https://i.ibb.co/bLvB8k4/LogoCSS.png" class="Logo-CSS" alt="LogoCSS" border="0">
+         <progress id="file" max="100" value="70"></progress>
+         <img src="https://i.ibb.co/kh7nkfR/logo-JS2-removebg-preview-removebg-preview.png" class="Logo-JS" alt="logo-JS2-removebg-preview-removebg-preview" border="0">
+         <progress id="file" max="100" value="50"></progress>
+        </div>
         </article>
     </section>
    </main>  
