feat: Portfolio complete

--- a/index.html
+++ b/index.html
@@ -7,23 +7,20 @@
     <title>Portfolio Web</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Dancing+Script&family=Indie+Flower&display=swap" rel="stylesheet">
-
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Dancing+Script&family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 <body>
    <header> 
     <nav id="Navegacion">
         <a href="https://imgbb.com/"><img src="https://i.ibb.co/gRCmRPh/LogoAP.png" alt="LogoAP"  class="Logos" border="0"></a>
         <h1 class="Argentina-Programa">Argentina Programa #YoProgramo</h1>
-        
         <a class="Secciones" href="#">Sobre Mi</a>
         <a class="Secciones" href="#">Experiencia</a>
         <a class="Secciones" href="#">Educacion</a>
@@ -76,21 +73,27 @@
         </article>
         <article id="Educacion">
             <h2 class="Texto-Experiencia">Educacion</h2>
-            <div id="Centrar-Logo">    
+            <div id="contenedor-educacion">
             <a href="https://imgbb.com/"><img src="https://i.ibb.co/cwyzBLH/LogoAp2.png" id="Logo-Educacion" alt="LogoAp2" border="0"></a>
-            <p>^</p>
-            <p>|</p>
-            <h2 class="Texto-Educacion">Aqui estudie para Desarrollador Full-Stack Jr.</h2>
+                <ul>
+                    <li class="Detalles2">Certificacion: Desarrollo web Full Stack Jr.</li>
+                    <li class="Detalles2">Junio 2022 - Enero 2023</li>
+                </ul>
             </div>
-            <div id="Alineacion-Educacion">
-            <a href="https://imgbb.com/"><img src="https://i.ibb.co/fnrY967/Logo-Freecodecamp.png" id="Logo-Educacion2" alt="Logo-Freecodecamp" border="0"></a>
-            <h2 class="Texto-Educacion"> <---- Aqui obtuve la certificacion de "Diseño Web Responsivo" y "Algoritmos en Javascript"</h2>
-            </div>  
-            <div id="Alineacion-Educacion">
-                <h2 class="Texto-Educacion"> En OpenBootcamp reforce mis conocimientos en Javascript ----></h2>
-                <a href="https://ibb.co/DWgkR4D"><img src="https://i.ibb.co/3dYWC1y/Logo-Open-Bootcamp.jpg" id="Logo-OpenBootcamp" alt="Logo-Open-Bootcamp" border="0"></a>
-            </div>
-        </article>
+            <div id="contenedor-educacion">
+            <a href="https://imgbb.com/"><img src="https://i.ibb.co/fnrY967/Logo-Freecodecamp.png" id="Logo-freecodecamp" alt="Logo-Freecodecamp" border="0"></a>
+            <ul>
+                <li class="Detalles2">Certificacion: "Diseño responsivo"</li>
+                <li class="Detalles2">Certificacion: "Algoritmos en Javascript"</li>
+            </ul>
+        </div>
+        <div id="contenedor-educacion">
+            <a href="https://ibb.co/DWgkR4D"><img src="https://i.ibb.co/3dYWC1y/Logo-Open-Bootcamp.jpg" id="Logo-OpenBootcamp" alt="Logo-Open-Bootcamp" border="0"></a>
+            <ul>
+                <li class="Detalles2">Open-Bootcamp : Se reforzo el conocimiento en Javascript</li>
+             </ul>
+        </div>
+         </article>
         <article id="Habilidades">
          <h1 class="Texto-Experiencia">Lenguajes</h1>
          <div id="Contenedor-Habilidades">
@@ -102,7 +105,19 @@
          <progress id="file" max="100" value="50"></progress>
         </div>
         </article>
+        <article id="Proyectos">
+            <h1 class="Texto-Experiencia">Proyectos</h1>
+            <div id="Contenedor-Proyectos">
+            <a href="https://ibb.co/5jFJRYN"><img src="https://i.ibb.co/fNvTx8h/Pagina-Bielsa.png" class="Pagina-tributo" alt="Pagina-Bielsa" border="0"></a>
+            <h2 class="Detalles2">Pagina Tributo</h2>
+            <a href="https://ibb.co/RpvZgCX"><img src="https://i.ibb.co/7JY8SG3/Formulario.png" class="Pagina-tributo" alt="Formulario" border="0"></a><br /><a target='_blank' href='https://es.imgbb.com/'></a>
+            <h2 class="Detalles2">Practica Formulario</h2>
+            </div>
+        </article>
     </section>
+    <footer>
+        <h2 class="Texto-Footer">Trabajemos juntos..</h2>
+    </footer>
    </main>  
 </body> 
 </html>
