feat: Correction on Proyects section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Web</title>
     <link rel="stylesheet" href="style.css">
+    <script src="portfolio.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
@@ -108,10 +109,22 @@
         <article id="Proyectos">
             <h1 class="Texto-Experiencia">Proyectos</h1>
             <div id="Contenedor-Proyectos">
-            <a href="https://ibb.co/5jFJRYN"><img src="https://i.ibb.co/fNvTx8h/Pagina-Bielsa.png" class="Pagina-tributo" alt="Pagina-Bielsa" border="0"></a>
-            <h2 class="Detalles2">Pagina Tributo</h2>
-            <a href="https://ibb.co/RpvZgCX"><img src="https://i.ibb.co/7JY8SG3/Formulario.png" class="Pagina-tributo" alt="Formulario" border="0"></a><br /><a target='_blank' href='https://es.imgbb.com/'></a>
-            <h2 class="Detalles2">Practica Formulario</h2>
+                    <a href="https://ibb.co/5jFJRYN"><img src="https://i.ibb.co/fNvTx8h/Pagina-Bielsa.png" class="Pagina-tributo" alt="Pagina-Bielsa" border="0"></a>
+                    <ul>
+                            <li class="Detalles2">Nombre: Pagina Tributo a Marcelo Bielsa</li>
+                            <li class="Detalles2">Fecha de realizacion: Abril 2022</li>
+                            <li class="Detalles2">Se trata de uno de los proyectos integradores para la certificacion en freecodecamp</li>
+                            <li class="Detalles2"><a href="https://codepen.io/facutello/pen/BaJNbjj">Ingresa para visitarla</a></li>
+                    </ul>
+                </div>
+                <div id="Contenedor-Proyectos2">
+                <a href="https://ibb.co/RpvZgCX"><img src="https://i.ibb.co/7JY8SG3/Formulario.png" class="Pagina-tributo" alt="Formulario" border="0"></a><br /><a target='_blank' href='https://es.imgbb.com/'></a>
+            <ul>
+                <li class="Detalles2">Nombre: Practica de Formulario</li>
+                <li class="Detalles2">Fecha de realizacion: Junio 2022</li>
+                <li class="Detalles2">Se trata de uno de los proyectos integradores para la certificacion en freecodecamp</li>
+                <li class="Detalles2"><a href="https://codepen.io/facutello/pen/RwxjNva">Ingresa para visitarla</a></li>
+        </ul>
             </div>
         </article>
     </section>
